--- a/css/main.css
+++ b/css/main.css
@@ -83,17 +83,18 @@ section {
 }
 
 .header-nav {
-  border-bottom: 1px #a0a0a0;
+  border-bottom: 1px solid #a0a0a0;
 }
 
 .brand {
   width: 170px;
   height: 85px;
   margin-left: -15px;
+  margin-right: 60px;
 }
 
 .logo {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
