--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ section {
   padding: 6px 12px;
   width: 330px;
   height: 30px;
-  border: 1px #a0a0a0;
+  border: 1px solid #a0a0a0;
 }
 
 .search-button {
