add nav list li a class

--- a/css/main.css
+++ b/css/main.css
@@ -119,3 +119,10 @@ section {
   width: 575px;
   margin-top: 10px;
 }
+
+.nav-list li a {
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.2px;
+  font-weight: 700;
+}
