--- a/css/main.css
+++ b/css/main.css
@@ -151,3 +151,11 @@ section {
   border-radius: 100px;
   max-width: 100%;
 }
+
+.hero {
+  background-image: ('img/hero.jpg');
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  text-transform: uppercase;
+}
