--- a/css/main.css
+++ b/css/main.css
@@ -315,3 +315,26 @@ footer {
   right: 0;
   z-index: -1;
 }
+
+.lists {
+  flex: 0 0 75%;
+  padding: 40px 15px;
+}
+
+.link-header {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+footer a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 0 0 4px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
