--- a/css/main.css
+++ b/css/main.css
@@ -338,3 +338,27 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+
+.social ul li {
+  display: inline-block;
+}
+
+.social ul li a {
+  display: block;
+  width: 23px;
+  height: 23px;
+  background-size: 23px 23px;
+  background-position: center;
+}
+
+.twitter {
+  background-image: url('../img/twitter.svg');
+}
+
+.facebook {
+  background-image: url('../img/facebook.svg');
+}
+
+.instagram {
+  background-image: url('../img/instagram.svg');
+}
