--- a/css/main.css
+++ b/css/main.css
@@ -362,3 +362,33 @@ footer a:hover {
 .instagram {
   background-image: url('../img/instagram.svg');
 }
+
+.pinterest {
+  background-image: url('../img/pinterest.svg');
+}
+
+.newsletter .link-header {
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 5px;
+}
+
+.newsletter .link-subheader {
+  font-style: italic;
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.newsletter input {
+  border: 1px solid #346147;
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.newsletter button {
+  width: 150px;
+  min-width: auto;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
